code/force-app/main/default/objects/Delivery__c/fields/API_Delivery_Time_c__c.field-meta.xml
<CustomField>
    <fullName>API_Delivery_Time_c__c</fullName>
    <label>API_Delivery_Time__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>