code/force-app/main/default/objects/Delivery__c/fields/Delivery_Exception__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Exception</label>
    <referenceTo>Delivery_Exception__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>