code/force-app/main/default/objects/Delivery__c/fields/Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ID__c</fullName>
    <description>“Unique system-generated delivery identifier.”</description>
    <displayFormat>DLV-{0000}</displayFormat>
    <inlineHelpText>“Unique system-generated delivery identifier.”</inlineHelpText>
    <label>Delivery ID</label>
    <type>AutoNumber</type>
</CustomField>