code/force-app/main/default/objects/Delivery__c/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <displayFormat>DEL-{0000}</displayFormat>
    <label>Delivery Number</label>
    <type>AutoNumber</type>
</CustomField>