code/force-app/main/default/objects/Delivery__c/fields/ETA_Display_c__c.field-meta.xml
<CustomField>
    <fullName>ETA_Display_c__c</fullName>
    <formula>TEXT(Estimated_Time__c) &amp; &quot; minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETA_Display__c</label>
    <type>Text</type>
</CustomField>