code/force-app/main/default/objects/Delivery__c/fields/IsLate_c__c.field-meta.xml
<CustomField>
    <fullName>IsLate_c__c</fullName>
    <formula>AND(
   NOT(ISBLANK(Actual_Delivery_Time__c)),
   Actual_Delivery_Time__c &gt; Scheduled_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLate__c</label>
    <type>Checkbox</type>
</CustomField>