code/force-app/main/default/objects/Delivery__c/validationRules/Scheduled_Date_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Date_Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Scheduled_Date__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Scheduled_Date__c</errorDisplayField>
    <errorMessage>Scheduled date cannot be in the past.</errorMessage>
</ValidationRule>